# Gold_Price_Monitoring

./: index.html  pyproject.toml  script.js  style.css
.github/workflows/: gold-tracker.yml
data/: gold_prices.json
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/: schema.yml
dbt_project/models/marts/: fct_gold_prices.sql
dbt_project/models/staging/: stg_gold_prices.sql
sources/dlt/: __init__.py  dlt_ingestion.py
sources/mongodb/: fix_mongodb_data.py
sources/scraper/: scraper.py
sources/utils/: analysis.py  visualize.py
